infrastructure/playbooks/compiled-templates/k8s/wai-stag/01_wai_cache.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: wai-stag
spec:
  ports:
  - name: portal
    protocol: TCP
    port: 80
  selector:
    app: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: wai-stag
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      annotations:
        releaseDate: now
      labels:
        app: cache
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - cache
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: webanalyticsitalia/wai-cache:latest
        name: cache
        resources:
          limits:
            cpu: "0.25"
            memory: "512Mi"
        ports:
        - containerPort: 80
          name: cache
        volumeMounts:
        - name: cache-conf
          mountPath: /etc/varnish
      volumes:
        - name: cache-conf
          configMap:
            name: cache-configmap
---
