infrastructure/playbooks/compiled-templates/k8s/wai-stag/02_portal_update_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer-wai-stag
    kubernetes.io/ingress.class: nginx-wai-stag
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - WAI
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-type: basic    
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Backend portal;
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header Allow "GET, POST" always;

      if ($request_method !~ ^(GET|POST)$) {
        return 405;
      }
  name: portal
  namespace: wai-stag
spec:
  rules:
  - host: staging.webanalytics.italia.it
    http:
      paths:
      - backend:
          serviceName: cache-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - staging.webanalytics.italia.it
    secretName: portal-ingress-acme-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer-wai-stag
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx-wai-stag
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Backend matomo;
  name: matomo
  namespace: wai-stag
spec:
  rules:
  - host: staging.webanalytics.italia.it
    http:
      paths:
      - backend:
          serviceName: cache-service
          servicePort: 80
        path: /matomo(/|$)(.*)
  tls:
  - hosts:
    - staging.webanalytics.italia.it
    secretName: portal-ingress-acme-tls
